Basic if support using Groovy to evaluate expressions